Before live changes
this remove team section, remove client section, also change footer company name.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>VST Business Growth - IT Solutions And Services HTML5 Template</title>
+    <title>VST Growth Business - IT Solutions And Services HTML5 Template</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
@@ -65,8 +65,7 @@
                             <div class="header-info-wrap">
                                 <ul class="list-wrap">
                                     <li><i class="fas fa-phone"></i><a href="tel:+91-8707781155">+91-8707781155</a></li>
-                                    <li><i class="fas fa-envelope"></i><a
-                                            href="mailto:info@vstgrowthbusiness.co">info@vstgrowthbusiness.co</a>
+                                    <li><i class="fas fa-envelope"></i><a href="mailto:info@vstgrowthbusiness.com">info@vstgrowthbusiness.com</a>
                                     </li>
                                 </ul>
                             </div>
@@ -635,7 +634,7 @@
         <!-- services-area-end -->
 
         <!-- team-area -->
-        <section class="team-area fix pt-115 pb-90">
+        <!-- <section class="team-area fix pt-115 pb-90">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-6">
@@ -724,11 +723,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- team-area-end -->
 
         <!-- brand-area -->
-        <div class="brand-area">
+        <!-- <div class="brand-area">
             <div class="container">
                 <div class="brand-inner">
                     <div class="row justify-content-center">
@@ -778,7 +777,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- brand-area-end -->
 
         <!-- work-area -->
@@ -1245,7 +1244,7 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="copyright-text">
-                                <p>© 2023 <span>VST Business Growth</span>. All Rights Reserved </p>
+                                <p>© 2023 <span>VST Growth Business</span>. All Rights Reserved </p>
                             </div>
                         </div>
                         <div class="col-lg-5">
