--- a/our-focused.html
+++ b/our-focused.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>VST Business Growth - IT Solutions And Services HTML5 Template</title>
+    <title>VST Growth Business - IT Solutions And Services HTML5 Template</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -69,7 +69,7 @@
                                 <ul class="list-wrap">
                                     <li><i class="fas fa-phone"></i><a href="tel:+91-8707781155">+91-8707781155</a></li>
                                     <li><i class="fas fa-envelope"></i><a
-                                            href="mailto:info@vstgrowthbusiness.co">info@vstgrowthbusiness.co</a>
+                                            href="mailto:info@vstgrowthbusiness.com">info@vstgrowthbusiness.com</a>
                                     </li>
                                 </ul>
                             </div>
@@ -402,7 +402,7 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="copyright-text">
-                                <p>© 2023 <span>VST Business Growth</span>. All Rights Reserved </p>
+                                <p>© 2023 <span>VST Growth Business</span>. All Rights Reserved </p>
                             </div>
                         </div>
                         <div class="col-lg-5">
@@ -441,6 +441,6 @@
     <script src="assets/js/main.js"></script>
 </body>
 
-<!-- Mirrored from ifingerstudio.com/templates/VST Business Growth-html/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Oct 2023 11:32:46 GMT -->
+<!-- Mirrored from ifingerstudio.com/templates/VST Growth Business-html/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Oct 2023 11:32:46 GMT -->
 
 </html>
