--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>VST Business Growth - IT Solutions And Services HTML5 Template</title>
+    <title>VST Growth Business - IT Solutions And Services HTML5 Template</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
@@ -65,7 +65,7 @@
                                 <ul class="list-wrap">
                                     <li><i class="fas fa-phone"></i><a href="tel:+91-8707781155">+91-8707781155</a></li>
                                     <li><i class="fas fa-envelope"></i><a
-                                            href="mailto:info@vstgrowthbusiness.co">info@vstgrowthbusiness.co</a>
+                                            href="mailto:info@vstgrowthbusiness.com">info@vstgrowthbusiness.com</a>
                                     </li>
                                 </ul>
                             </div>
@@ -428,7 +428,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-8">
                         <div class="section-title text-center mb-40 tg-heading-subheading animation-style2">
                             <span class="sub-title tg-element-title">Our Journey</span>
-                            <h2 class="title tg-element-title">VST Business Growth</h2>
+                            <h2 class="title tg-element-title">VST Growth Business</h2>
                         </div>
                     </div>
                 </div>
@@ -494,7 +494,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-8">
                         <div class="section-title text-center mb-40 tg-heading-subheading animation-style2">
                             <span class="sub-title tg-element-title">Why Us?</span>
-                            <h2 class="title tg-element-title">VST Business Growth</h2>
+                            <h2 class="title tg-element-title">VST Growth Business</h2>
                         </div>
                     </div>
                 </div>
@@ -572,7 +572,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-8">
                         <div class="section-title text-center mb-40 tg-heading-subheading animation-style2">
                             <span class="sub-title tg-element-title">Our Strategy</span>
-                            <h2 class="title tg-element-title">VST Business Growth</h2>
+                            <h2 class="title tg-element-title">VST Growth Business</h2>
                         </div>
                     </div>
                 </div>
@@ -860,7 +860,7 @@
                     <div class="row">
                         <div class="col-lg-7">
                             <div class="copyright-text">
-                                <p>© 2023 <span>VST Business Growth</span>. All Rights Reserved </p>
+                                <p>© 2023 <span>VST Growth Business</span>. All Rights Reserved </p>
                             </div>
                         </div>
                         <div class="col-lg-5">
