--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>VST Growth Business - IT Solutions And Services HTML5 Template</title>
-    <meta name="description" content="">
+    <title>VST Growth Business - IT Solutions And Services</title>
+      <meta name="description" content="Vst Growth Business">
+  <meta name="keywords" content="VST Growth Business, VST, vst, Growth business, growth business, growth, Power BI, Share Points, MS Dynamics, Microsoft Azure">
+  <meta name="author" content="VST Growth Business">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
     <!-- CSS here -->
