--- a/about-us.html
+++ b/about-us.html
@@ -53,10 +53,10 @@
                         <div class="header-top-left">
                             <div class="header-social-wrap">
                                 <ul class="list-wrap">
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/in/vst-growth-business-057848296/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/vst-growth-business/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -879,8 +879,8 @@
                         <div class="col-lg-5">
                             <div class="footer-menu">
                                 <ul class="list-wrap">
-                                    <li><a href="javascript:void(0);">Privacy Policy</a></li>
-                                    <li><a href="javascript:void(0);">Terms & Conditions</a></li>
+                                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                    <li><a href="terms-and-conditions.html">Terms & Conditions</a></li>
                                 </ul>
                             </div>
                         </div>
