Social media and more feedbacks done

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>VST Growth Business - IT Solutions And Services</title>
-      <meta name="description" content="Vst Growth Business">
-  <meta name="keywords" content="VST Growth Business, VST, vst, Growth business, growth business, growth, Power BI, Share Points, MS Dynamics, Microsoft Azure">
-  <meta name="author" content="VST Growth Business">
+    <meta name="description" content="Vst Growth Business">
+    <meta name="keywords"
+        content="VST Growth Business, VST, vst, Growth business, growth business, growth, Power BI, Share Points, MS Dynamics, Microsoft Azure">
+    <meta name="author" content="VST Growth Business">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
     <!-- CSS here -->
@@ -53,10 +54,15 @@
                         <div class="header-top-left">
                             <div class="header-social-wrap">
                                 <ul class="list-wrap">
-                                    <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/company/vst-growth-business/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL"
+                                            target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><img
+                                                src="assets/img/x-logo.png"></a></li>
+                                    <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D"
+                                            target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/vst-growth-business/"
+                                            target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="https://www.youtube.com/@VSTGROWTHBUSINESS" target="_blank"><i class="fab fa-youtube"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -66,7 +72,8 @@
                             <div class="header-info-wrap">
                                 <ul class="list-wrap">
                                     <li><i class="fas fa-phone"></i><a href="tel:+91-9919115581">+91-9919115581</a></li>
-                                    <li><i class="fas fa-envelope"></i><a href="mailto:info@vstgrowthbusiness.com">info@vstgrowthbusiness.com</a>
+                                    <li><i class="fas fa-envelope"></i><a
+                                            href="mailto:info@vstgrowthbusiness.com">info@vstgrowthbusiness.com</a>
                                     </li>
                                 </ul>
                             </div>
@@ -1226,7 +1233,7 @@
                         <div class="col-lg-3 col-md-4 col-sm-6">
                             <div class="footer-widget">
                                 <div class="fw-title">
-                                    <h4 class="title">Follo US</h4>
+                                    <h4 class="title">Follow US</h4>
                                 </div>
                                 <!-- <div class="fw-link">
 
@@ -1238,15 +1245,22 @@
                                 <div class="footer-content mt-lg-4 mt-md-0 mt-0">
                                     <!-- <p>We are a company that takes pride in a legacy of 13 years, with 3 of those
                                         dedicated to pioneering in our domain</p> -->
+
                                     <ul class="list-wrap">
-                                        <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="https://www.linkedin.com/company/vst-growth-business/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL"
+                                                target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><img
+                                                    src="assets/img/x-logo.png"></a></li>
+                                        <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D"
+                                                target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/vst-growth-business/"
+                                                target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a href="https://www.youtube.com/@VSTGROWTHBUSINESS" target="_blank"><i class="fab fa-youtube"></i></a></li>
                                     </ul>
+
                                 </div>
                             </div>
-                            
+
                         </div>
                     </div>
                 </div>
@@ -1263,7 +1277,7 @@
                             <div class="footer-menu">
                                 <ul class="list-wrap">
                                     <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                                    <li><a href="terms-and-conditions.html">Terms & Conditions</a></li>
+                                    <li><a href="terms-and-conditions.html">Terms & Conditions*</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -1273,7 +1287,11 @@
         </div>
     </footer>
     <!-- footer-area-end -->
-
+    <div class="whatsapp-icon" style="position: fixed; bottom: 0px; left: 10px; background-color: transparent; color: rgb(37, 211, 102); border-radius: 50px; text-align: center; font-size: 70px; z-index: 999;">
+        <a href="https://api.whatsapp.com/send?phone=919919115581" target="_blank" class="wa-float">
+            <img src="assets/img/whatsapp-icon.webp" class="img-fluid" loading="lazy" alt="Whatsapp Images">
+        </a>
+    </div>
 
 
 
