--- a/about-us.html
+++ b/about-us.html
@@ -53,10 +53,15 @@
                         <div class="header-top-left">
                             <div class="header-social-wrap">
                                 <ul class="list-wrap">
-                                    <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/company/vst-growth-business/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL"
+                                            target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><img
+                                                src="assets/img/x-logo.png"></a></li>
+                                    <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D"
+                                            target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/vst-growth-business/"
+                                            target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="https://www.youtube.com/@VSTGROWTHBUSINESS" target="_blank"><i class="fab fa-youtube"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -202,7 +207,7 @@
     <main>
 
         <!-- breadcrumb-area -->
-        <section class="breadcrumb-area breadcrumb-bg" data-background="assets/img/bg/breadcrumb_bg.jpg">
+        <section class="breadcrumb-area breadcrumb-bg" data-background="assets/img/bg/abt_us_banner.jpg">
             <div class="container custom-container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -283,7 +288,7 @@
 
         <!-- skill-area -->
         <section class="skill-area fix pt-75 pb-80">
-            <div class="video-bg" data-background="assets/img/bg/video_bg.jpg">
+            <div class="video-bg" data-background="assets/img/bg/abt_us_Img.jpg">
                 <!-- <a href="https://www.youtube.com/watch?v=TdSA7gkVYU0" class="play-btn popup-video pulse"><i
                         class="fas fa-play"></i></a> -->
             </div>
@@ -292,8 +297,8 @@
                     <div class="col-xl-5 col-lg-6">
                         <div class="skill-content">
                             <div class="section-title title-style-four mb-20 tg-heading-subheading animation-style2">
-                                <span class="sub-title tg-element-title">Our About</span>
-                                <h2 class="title tg-element-title">Introduction</h2>
+                                <!-- <span class="sub-title tg-element-title">Our About</span> -->
+                                <h2 class="title tg-element-title">INTRODUCTION</h2>
                             </div>
                             <p>We are a company that takes pride in a legacy of 13 years, with 3 of those dedicated to
                                 pioneering in our domain. Our journey began with a vision to leverage cutting-edge
@@ -429,7 +434,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-5 col-lg-6 col-md-8">
                         <div class="section-title text-center mb-40 tg-heading-subheading animation-style2">
-                            <span class="sub-title tg-element-title">Our Journey</span>
+                            <!-- <span class="sub-title tg-element-title">Our Journey</span> -->
                             <h2 class="title tg-element-title">VST Growth Business</h2>
                         </div>
                     </div>
@@ -495,7 +500,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-5 col-lg-6 col-md-8">
                         <div class="section-title text-center mb-40 tg-heading-subheading animation-style2">
-                            <span class="sub-title tg-element-title">Why Us?</span>
+                            <!-- <span class="sub-title tg-element-title">Why Us?</span> -->
                             <h2 class="title tg-element-title">VST Growth Business</h2>
                         </div>
                     </div>
@@ -742,7 +747,7 @@
         <!-- team-area-end -->
 
         <!-- newsletter-area -->
-        <section class="newsletter-area-four choose-bg">
+        <!-- <section class="newsletter-area-four choose-bg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -779,7 +784,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- newsletter-area-end -->
 
     </main>
@@ -843,7 +848,7 @@
                         <div class="col-lg-3 col-md-4 col-sm-6">
                             <div class="footer-widget">
                                 <div class="fw-title">
-                                    <h4 class="title">Follo US</h4>
+                                    <h4 class="title">Follow US</h4>
                                 </div>
                                 <!-- <div class="fw-link">
 
@@ -855,12 +860,17 @@
                                 <div class="footer-content mt-lg-4 mt-md-0 mt-0">
                                     <!-- <p>We are a company that takes pride in a legacy of 13 years, with 3 of those
                                         dedicated to pioneering in our domain</p> -->
-                                    <ul class="list-wrap">
-                                        <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="https://www.linkedin.com/company/vst-growth-business/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                                    </ul>
+                                        <ul class="list-wrap">
+                                            <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL"
+                                                    target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                            <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><img
+                                                        src="assets/img/x-logo.png"></a></li>
+                                            <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D"
+                                                    target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                            <li><a href="https://www.linkedin.com/company/vst-growth-business/"
+                                                    target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                            <li><a href="https://www.youtube.com/@VSTGROWTHBUSINESS" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                                        </ul>
                                 </div>
                             </div>
                             
@@ -880,7 +890,7 @@
                             <div class="footer-menu">
                                 <ul class="list-wrap">
                                     <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                                    <li><a href="terms-and-conditions.html">Terms & Conditions</a></li>
+                                    <li><a href="terms-and-conditions.html">Terms & Conditions*</a></li>
                                 </ul>
                             </div>
                         </div>
