--- a/sharepoint-consultancy.html
+++ b/sharepoint-consultancy.html
@@ -56,10 +56,15 @@
                         <div class="header-top-left">
                             <div class="header-social-wrap">
                                 <ul class="list-wrap">
-                                    <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/company/vst-growth-business/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL"
+                                            target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><img
+                                                src="assets/img/x-logo.png"></a></li>
+                                    <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D"
+                                            target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/vst-growth-business/"
+                                            target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="https://www.youtube.com/@VSTGROWTHBUSINESS" target="_blank"><i class="fab fa-youtube"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -293,7 +298,7 @@
         <!-- Our Focused Area end -->
 
         <!-- newsletter-area -->
-        <section class="newsletter-area-four">
+        <!-- <section class="newsletter-area-four">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -330,7 +335,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- newsletter-area-end -->
 
     </main>
@@ -394,7 +399,7 @@
                         <div class="col-lg-3 col-md-4 col-sm-6">
                             <div class="footer-widget">
                                 <div class="fw-title">
-                                    <h4 class="title">Follo US</h4>
+                                    <h4 class="title">Follow US</h4>
                                 </div>
                                 <!-- <div class="fw-link">
 
@@ -406,12 +411,17 @@
                                 <div class="footer-content mt-lg-4 mt-md-0 mt-0">
                                     <!-- <p>We are a company that takes pride in a legacy of 13 years, with 3 of those
                                         dedicated to pioneering in our domain</p> -->
-                                    <ul class="list-wrap">
-                                        <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="https://www.linkedin.com/company/vst-growth-business/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                                    </ul>
+                                        <ul class="list-wrap">
+                                            <li><a href="https://www.facebook.com/people/VSTgrowthbusiness/61553710400303/?mibextid=ZbWKwL"
+                                                    target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                            <li><a href="https://twitter.com/KumarGyane47103?s=20" target="_blank"><img
+                                                        src="assets/img/x-logo.png"></a></li>
+                                            <li><a href="https://www.instagram.com/vstgrowthbusiness/?igshid=MzMyNGUyNmU2YQ%3D%3D"
+                                                    target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                            <li><a href="https://www.linkedin.com/company/vst-growth-business/"
+                                                    target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                            <li><a href="https://www.youtube.com/@VSTGROWTHBUSINESS" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                                        </ul>
                                 </div>
                             </div>
                             
@@ -431,7 +441,7 @@
                             <div class="footer-menu">
                                 <ul class="list-wrap">
                                     <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                                    <li><a href="terms-and-conditions.html">Terms & Conditions</a></li>
+                                    <li><a href="terms-and-conditions.html">Terms & Conditions*</a></li>
                                 </ul>
                             </div>
                         </div>
