--- a/services.html
+++ b/services.html
@@ -105,17 +105,19 @@
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li class="menu-item-has-children active"><a href="services.html">Services</a>
                                             <ul class="sub-menu">
-                                                <li class="menu-item-has-children"><a href="ms-dynamics-365-business-central.html">MS Dynamics 365
-                                                    Business Central</a>
-                                                <!-- <ul class="sub-menu">
+                                                <li class="menu-item-has-children"><a
+                                                        href="ms-dynamics-365-business-central.html">MS Dynamics 365
+                                                        Business Central</a>
+                                                    <!-- <ul class="sub-menu">
                                                     <li><a href="dynamics-365-business-central-consultancy.html">Dynamics
                                                             365 Business Central Consultancy</a>
                                                     </li>
                                                     <li><a href="dynamics-365-business-central-customization.html">Dynamics
                                                             365 Business Central Customization</a></li>
                                                 </ul> -->
-                                            </li>
-                                                <li class="menu-item-has-children"><a href="power-bi.html">Power Platform</a>
+                                                </li>
+                                                <li class="menu-item-has-children"><a href="power-bi.html">Power
+                                                        Platform</a>
                                                     <!-- <ul class="sub-menu">
                                                         <li><a href="power-bi-consultancy.html">Power BI Consultancy</a>
                                                         </li>
@@ -123,7 +125,8 @@
                                                                 Customization</a></li>
                                                     </ul> -->
                                                 </li>
-                                                <li class="menu-item-has-children"><a href="microsoft-azure.html">Microsoft Azure</a>
+                                                <li class="menu-item-has-children"><a
+                                                        href="microsoft-azure.html">Microsoft Azure</a>
                                                     <!-- <ul class="sub-menu">
                                                         <li><a href="azure-consultancy.html">Azure Consultancy</a>
                                                         </li>
@@ -131,7 +134,8 @@
                                                         </li>
                                                     </ul> -->
                                                 </li>
-                                                <li class="menu-item-has-children"><a href="sharepoint.html">SharePoint</a>
+                                                <li class="menu-item-has-children"><a
+                                                        href="sharepoint.html">SharePoint</a>
                                                     <!-- <ul class="sub-menu">
                                                         <li><a href="sharepoint-consultancy.html">SharePoint
                                                                 Consultancy</a>
@@ -140,8 +144,10 @@
                                                                 Customization</a></li>
                                                     </ul> -->
                                                 </li>
-                                                <li class="menu-item-has-children"><a href="web-development.html">Web Development</a></li>
-                                                <li class="menu-item-has-children"><a href="digital-marketing.html">Digital Marketing</a></li>
+                                                <li class="menu-item-has-children"><a href="web-development.html">Web
+                                                        Development</a></li>
+                                                <li class="menu-item-has-children"><a
+                                                        href="digital-marketing.html">Digital Marketing</a></li>
                                                 <!-- <li><a href="#">Others</a></li> -->
                                             </ul>
                                         </li>
@@ -248,57 +254,10 @@
                         <div class="single-cat white-bg h-calc radius-6">
                             <div class="d-flex flex-wrap align-items-center mb-20">
                                 <div class="cat-icon">
-                                    <img src="assets/img/services/icon1.png" alt="img">
-                                </div>
-                                <h5><a href="power-bi.html" class="title line-clamp-2 font-700">Power BI</a></h5>
-                            </div>
-                            <div class="cat-cap">
-                                <p class="pera">Consultancy and customization in Power BI are valuable services that
-                                    help businesses and organizations make the most of this powerful business
-                                    intelligence tool. Both consultancy and customization services are essential
-                                    for organizations looking to get the most value from Power BI. A well-designed Power
-                                    BI implementation, with custom reports and dashboards, can lead to better
-                                    decision-making, improved operational efficiency, and a
-                                    competitive advantage. Consulting experts and customizing Power BI can help you
-                                    achieve your specific business intelligence goals.</p>
-                            </div>
-                            <div class="learn-btn">
-                                <a href="power-bi.html">Learn More <span>&#129030;</span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
-                        <div class="single-cat white-bg h-calc radius-6">
-                            <div class="d-flex flex-wrap align-items-center mb-20">
-                                <div class="cat-icon">
-                                    <img src="assets/img/services/icon2.png" alt="img">
-                                </div>
-                                <h5><a href="sharepoint.html" class="title line-clamp-2 font-700">SharePoint</a></h5>
-                            </div>
-                            <div class="cat-cap">
-                                <p class="pera">Consultancy and customization services in SharePoint are critical for
-                                    tailoring this versatile platform to meet specific business needs and for ensuring
-                                    that it aligns with your organization's objectives. Both consultancy
-                                    and customization services are essential for organizations looking to leverage
-                                    SharePoint's full potential. A well-designed SharePoint implementation, with
-                                    customized sites, workflows, and automation, can lead to improved
-                                    collaboration, streamlined processes, and better information management. SharePoint
-                                    experts can help ensure that the platform aligns with your organization's unique
-                                    needs and objectives.</p>
-                            </div>
-                            <div class="learn-btn">
-                                <a href="sharepoint.html">Learn More <span>&#129030;</span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
-                        <div class="single-cat white-bg h-calc radius-6">
-                            <div class="d-flex flex-wrap align-items-center mb-20">
-                                <div class="cat-icon">
                                     <img src="assets/img/services/icon3.png" alt="img">
                                 </div>
                                 <h5><a href="ms-dynamics-365-business-central.html"
-                                        class="title line-clamp-2 font-700">Microsoft Dynamics NAV</a></h5>
+                                        class="title line-clamp-2 font-700">MS Dynamics 365 <br> Business Central</a></h5>
                             </div>
                             <div class="cat-cap">
                                 <p class="pera">Consultancy and customization services in Microsoft Dynamics 365
@@ -313,6 +272,29 @@
                             </div>
                             <div class="learn-btn">
                                 <a href="ms-dynamics-365-business-central.html">Learn More <span>&#129030;</span></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
+                        <div class="single-cat white-bg h-calc radius-6">
+                            <div class="d-flex flex-wrap align-items-center mb-20">
+                                <div class="cat-icon">
+                                    <img src="assets/img/services/icon1.png" alt="img">
+                                </div>
+                                <h5><a href="power-bi.html" class="title line-clamp-2 font-700">Power Platforms</a></h5>
+                            </div>
+                            <div class="cat-cap">
+                                <p class="pera">Consultancy and customization in Power BI are valuable services that
+                                    help businesses and organizations make the most of this powerful business
+                                    intelligence tool. Both consultancy and customization services are essential
+                                    for organizations looking to get the most value from Power BI. A well-designed Power
+                                    BI implementation, with custom reports and dashboards, can lead to better
+                                    decision-making, improved operational efficiency, and a
+                                    competitive advantage. Consulting experts and customizing Power BI can help you
+                                    achieve your specific business intelligence goals.</p>
+                            </div>
+                            <div class="learn-btn">
+                                <a href="power-bi.html">Learn More <span>&#129030;</span></a>
                             </div>
                         </div>
                     </div>
@@ -346,25 +328,23 @@
                         <div class="single-cat white-bg h-calc radius-6">
                             <div class="d-flex flex-wrap align-items-center mb-20">
                                 <div class="cat-icon">
-                                    <img src="assets/img/services/icon5.png" alt="img">
+                                    <img src="assets/img/services/icon2.png" alt="img">
                                 </div>
-                                <h5><a href="digital-marketing.html" class="title line-clamp-2 font-700">Digital
-                                        Marketing</a></h5>
+                                <h5><a href="sharepoint.html" class="title line-clamp-2 font-700">SharePoint</a></h5>
                             </div>
                             <div class="cat-cap">
-                                <p class="pera">Consultancy and customization services in Microsoft Azure are essential
-                                    for tailoring this cloud platform to meet the specific needs of businesses and
-                                    organizations. These services help organizations leverage Azure's capabilities
-                                    to optimize their cloud infrastructure, applications, and data management. Both
-                                    Azure consultancy and customization services are crucial for organizations looking
-                                    to effectively use the Azure cloud platform, optimize
-                                    their cloud infrastructure, and build tailored solutions to meet their specific
-                                    needs and objectives. Consulting experts and customizing Azure can help
-                                    organizations achieve their goals while ensuring optimal use of
-                                    cloud resources.</p>
+                                <p class="pera">Consultancy and customization services in SharePoint are critical for
+                                    tailoring this versatile platform to meet specific business needs and for ensuring
+                                    that it aligns with your organization's objectives. Both consultancy
+                                    and customization services are essential for organizations looking to leverage
+                                    SharePoint's full potential. A well-designed SharePoint implementation, with
+                                    customized sites, workflows, and automation, can lead to improved
+                                    collaboration, streamlined processes, and better information management. SharePoint
+                                    experts can help ensure that the platform aligns with your organization's unique
+                                    needs and objectives.</p>
                             </div>
                             <div class="learn-btn">
-                                <a href="digital-marketing.html">Learn More <span>&#129030;</span></a>
+                                <a href="sharepoint.html">Learn More <span>&#129030;</span></a>
                             </div>
                         </div>
                     </div>
@@ -394,6 +374,32 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 mb-3">
+                        <div class="single-cat white-bg h-calc radius-6">
+                            <div class="d-flex flex-wrap align-items-center mb-20">
+                                <div class="cat-icon">
+                                    <img src="assets/img/services/icon5.png" alt="img">
+                                </div>
+                                <h5><a href="digital-marketing.html" class="title line-clamp-2 font-700">Digital
+                                        Marketing</a></h5>
+                            </div>
+                            <div class="cat-cap">
+                                <p class="pera">Consultancy and customization services in Microsoft Azure are essential
+                                    for tailoring this cloud platform to meet the specific needs of businesses and
+                                    organizations. These services help organizations leverage Azure's capabilities
+                                    to optimize their cloud infrastructure, applications, and data management. Both
+                                    Azure consultancy and customization services are crucial for organizations looking
+                                    to effectively use the Azure cloud platform, optimize
+                                    their cloud infrastructure, and build tailored solutions to meet their specific
+                                    needs and objectives. Consulting experts and customizing Azure can help
+                                    organizations achieve their goals while ensuring optimal use of
+                                    cloud resources.</p>
+                            </div>
+                            <div class="learn-btn">
+                                <a href="digital-marketing.html">Learn More <span>&#129030;</span></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -415,14 +421,9 @@
                                     <a href="index.html"><img src="assets/img/logo/w_logo.svg" alt=""></a>
                                 </div>
                                 <div class="footer-content">
-                                    <p>We are a company that takes pride in a legacy of 13 years, with 3 of those
-                                        dedicated to pioneering in our domain</p>
-                                    <!-- <ul class="list-wrap">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    </ul> -->
+                                    <a href="about-us.html">
+                                        <p> With over 13 years of unwavering expertise,<b> VST growth Business</b> stands as a stalwart in the industry, dedicated to providing top-tier services in ERP/IT solutions...</p>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -433,7 +434,8 @@
                                 </div>
                                 <div class="fw-link">
                                     <ul class="list-wrap">
-                                        <li><a href="ms-dynamics-365-business-central.html">MS Dynamics 365 Business Central</a></li>
+                                        <li><a href="ms-dynamics-365-business-central.html">MS Dynamics 365 Business
+                                                Central</a></li>
                                         <li><a href="power-bi.html">Power Platform</a></li>
                                         <li><a href="microsoft-azure.html">Microsoft Azure</a></li>
                                         <li><a href="sharepoint.html">SharePoint</a></li>
@@ -462,7 +464,7 @@
                         <div class="col-lg-3 col-md-4 col-sm-6">
                             <div class="footer-widget">
                                 <div class="fw-title">
-                                    <h4 class="title">Follow US</h4>
+                                    <h4 class="title">Follow Us</h4>
                                 </div>
                                 <!-- <div class="fw-link">
 
