--- a/about-us.html
+++ b/about-us.html
@@ -296,9 +296,7 @@
                                 <!-- <span class="sub-title tg-element-title">Our About</span> -->
                                 <h2 class="title tg-element-title">INTRODUCTION</h2>
                             </div>
-                            <p>We are a company that takes pride in a legacy of 13 years, with 3 of those dedicated to pioneering in our domain. Our journey began with a vision to leverage cutting-edge technology and empower businesses with solutions that
-                                drive growth, efficiency, and innovation. Today, we stand as a testament to our unwavering commitment to excellence and our dedication to harnessing the immense capabilities of Microsoft Dynamics NAV, 365 Business Central,
-                                Power BI, and Azure.</p>
+                            <p>With over 13 years of unwavering expertise,<b> VST growth Business</b> stands as a stalwart in the industry, dedicated to providing top-tier services in ERP/IT solutions, robust power platforms, and highly effective digital marketing. Our journey has been defined by a commitment to excellence and a deep understanding of the evolving needs of businesses in the digital age. As a seasoned player in the field, we bring a wealth of experience to every project, ensuring that our clients receive tailored solutions that not only meet but exceed their expectations. At<b> VST growth Business</b> we don't just offer services; we provide a proven track record of success and innovation, guiding businesses towards sustained growth and technological prowess in a rapidly changing business landscape.</p>
                             <!-- <div class="progress-wrap">
                                 <div class="progress-item">
                                     <h5 class="title">Development</h5>
@@ -783,14 +781,9 @@
                                     <a href="index.html"><img src="assets/img/logo/w_logo.svg" alt=""></a>
                                 </div>
                                 <div class="footer-content">
-                                    <p>We are a company that takes pride in a legacy of 13 years, with 3 of those
-                                        dedicated to pioneering in our domain</p>
-                                    <!-- <ul class="list-wrap">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    </ul> -->
+                                    <a href="about-us.html">
+                                        <p> With over 13 years of unwavering expertise,<b> VST growth Business</b> stands as a stalwart in the industry, dedicated to providing top-tier services in ERP/IT solutions...</p>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -830,7 +823,7 @@
                         <div class="col-lg-3 col-md-4 col-sm-6">
                             <div class="footer-widget">
                                 <div class="fw-title">
-                                    <h4 class="title">Follow US</h4>
+                                    <h4 class="title">Follow Us</h4>
                                 </div>
                                 <!-- <div class="fw-link">
 
