--- a/index(Backup).html
+++ b/index(Backup).html
@@ -1194,7 +1194,7 @@
                         <div class="col-lg-3 col-md-4 col-sm-6">
                             <div class="footer-widget">
                                 <div class="fw-title">
-                                    <h4 class="title">Follow US</h4>
+                                    <h4 class="title">Follow Us</h4>
                                 </div>
                                 <!-- <div class="fw-link">
 
