--- a/power-bi-customization.html
+++ b/power-bi-customization.html
@@ -331,14 +331,9 @@
                                     <a href="index.html"><img src="assets/img/logo/w_logo.svg" alt=""></a>
                                 </div>
                                 <div class="footer-content">
-                                    <p>We are a company that takes pride in a legacy of 13 years, with 3 of those
-                                        dedicated to pioneering in our domain</p>
-                                    <!-- <ul class="list-wrap">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    </ul> -->
+                                    <a href="about-us.html">
+                                        <p> With over 13 years of unwavering expertise,<b> VST growth Business</b> stands as a stalwart in the industry, dedicated to providing top-tier services in ERP/IT solutions...</p>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -378,7 +373,7 @@
                         <div class="col-lg-3 col-md-4 col-sm-6">
                             <div class="footer-widget">
                                 <div class="fw-title">
-                                    <h4 class="title">Follow US</h4>
+                                    <h4 class="title">Follow Us</h4>
                                 </div>
                                 <!-- <div class="fw-link">
 
